style(mobile-menu): rearrange layout of navbar__menu - fixed menu__user as bottom - align menu__item & menu__language together

--- a/src/styles/abstract/_variables.scss
+++ b/src/styles/abstract/_variables.scss
@@ -5,3 +5,4 @@ $large-screen: 1024px;
 $xlarge-screen: 1440px;
 
 $hover-active-color: #FF8817;
+$hover-active-color-variant: #0b89fe;
